--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
   <!-- Custom styles for this template-->
   <link href="{% static 'css/sb-admin-2.min.css'%}" rel="stylesheet">
 
+    <!-- Custom styles for datatable page -->
+  <link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
+
 </head>
 
 <body id="page-top">
@@ -64,7 +67,8 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Custom Components:</h6>
-            <a class="collapse-item" href="attendance">Attendance</a>
+            <a class="collapse-item" href="{% url 'attendance'%}">Attendance</a>
+            <a class="collapse-item" href="{{ 'attendance/timesheet'}}">TimeSheet</a>
           </div>
         </div>
       </li>
@@ -393,6 +397,13 @@
   <!-- Page level custom scripts -->
   <script src="{% static 'js/demo/chart-area-demo.js' %}"></script>
   <script src="{% static 'js/demo/chart-pie-demo.js' %}"></script>
+
+  <!-- Page level plugins -->
+  <script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %} "></script>
+  <script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js'%}"></script>
+
+  <!-- Page level custom scripts -->
+  <script src="{% static 'js/demo/datatables-demo.js'%}"></script>
 
 </body>
 
