--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
@@ -68,7 +68,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Custom Components:</h6>
             <a class="collapse-item" href="{% url 'attendance'%}">Attendance</a>
-            <a class="collapse-item" href="{{ 'attendance/timesheet'}}">TimeSheet</a>
+            <a class="collapse-item" href="{% url 'timesheet'%}">TimeSheet</a>
           </div>
         </div>
       </li>
