--- a/attendance/templates/index.html
+++ b/attendance/templates/index.html
@@ -19,7 +19,7 @@
                 <div class="card-body">
                     {# user notification message#}
                     {% for message in messages %}
-                        <div class="alert alert-success" role="alert">
+                        <div class="alert alert-{{ message.tags }}" role="alert">
                             {{ message }}
                           </div>
                     {% endfor %}
